crates/alder-parse/src/expression/snapshots/alder_parse__expression__array__tests__error_double_comma.snap
---
source: crates/alder-parse/src/expression/array.rs
description: "[1,,2]"
---
Array(
    Expr(
        Start(
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
