crates/alder-parse/src/expression/snapshots/alder_parse__expression__array__tests__error_unclosed.snap
---
source: crates/alder-parse/src/expression/array.rs
description: "[1, 2"
---
Array(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 6,
            },
            unexpected: Position {
                line: 1,
                column: 6,
            },
        },
    ),
    1,
    1,
)
