crates/alder-parse/src/expression/snapshots/alder_parse__expression__array__tests__with_comments.snap
---
source: crates/alder-parse/src/expression/array.rs
description: "[\n    // first\n    1, // one\n    2,\n]\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: Array(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 6,
                    },
                },
                value: Number(
                    NumberLit {
                        value: 1.0,
                        text: "1",
                    },
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 4,
                        column: 6,
                    },
                },
                value: Number(
                    NumberLit {
                        value: 2.0,
                        text: "2",
                    },
                ),
            },
        ],
    ),
}
